tests/snapshots/cmd_generate__cmd_generate__step_output_through_workflow_call-output.snap
---
source: tests/cmd_generate.rs
expression: value
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_build.yaml
       Wrote .github/workflows/generated_ci.yaml
       Wrote .github/workflows/ghat_check.yaml
    Finished generated 3 workflows in [TIME]
