tests/snapshots/cmd_generate__cmd_generate__subdirectory_and_parent_imports-generated.snap
---
source: tests/cmd_generate.rs
expression: value
---
--- .github/workflows/generated_subdir_import.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Subdir Import
on:
  push:
    branches:
    - main
jobs:
  test:
    name: Test
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: cargo check
    - id: step_1
      run: hello
--- .github/workflows/ghat_check.yaml ---
[326 bytes]
