tests/snapshots/cmd_generate__cmd_generate__subdirectory_and_parent_imports-output.snap
---
source: tests/cmd_generate.rs
expression: value
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_subdir_import.yaml
       Wrote .github/workflows/ghat_check.yaml
    Finished generated 2 workflows in [TIME]
