tests/snapshots/cmd_generate__cmd_generate__workflow_call_trigger-generated.snap
---
source: tests/cmd_generate.rs
expression: value
---
--- .github/workflows/generated_build.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: Build
on:
  workflow_call:
    inputs:
      save_cache:
        type: boolean
        default: 'true'
    outputs:
      artifact:
        description: Build artifact path
        value: ${{ jobs.build.outputs.artifact }}
    secrets:
      deploy_token:
        description: Token for deployment
        required: true
      optional_key:
        description: Optional API key
jobs:
  build:
    name: Build
    runs-on: ubuntu-latest
    outputs:
      artifact: build.tar.gz
    steps:
    - id: step_0
      run: echo save_cache=${{ inputs.save_cache }}
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  pull_request: {}
jobs:
  build_that_thing:
    name: Build That Thing
    uses: ./.github/workflows/generated_build.yaml
    with:
      save_cache: false
    secrets: inherit
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    needs:
    - build_that_thing
    steps:
    - id: step_0
      run: echo deploying ${{ needs.build_that_thing.outputs.artifact }}
--- .github/workflows/ghat_check.yaml ---
[326 bytes]
