tests/snapshots/cmd_generate__cmd_generate__workflow_dispatch_inputs-generated.snap
---
source: tests/cmd_generate.rs
expression: value
---
--- .github/workflows/generated_deploy.yaml ---
# This file is generated by ghat. DO NOT EDIT.
name: Deploy
on:
  workflow_dispatch:
    inputs:
      environment:
        description: Target environment
        type: choice
        required: true
        default: staging
        options:
        - staging
        - production
      dry_run:
        description: Perform a dry run
        type: boolean
        default: 'false'
jobs:
  deploy:
    name: Deploy
    runs-on: ubuntu-latest
    steps:
    - id: step_0
      run: echo ${{ inputs.environment }} ${{ inputs.dry_run }}
--- .github/workflows/ghat_check.yaml ---
[315 bytes]
