tests/snapshots/cmd_generate__cmd_generate__workflow_dispatch_inputs-output.snap
---
source: tests/cmd_generate.rs
expression: value
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_deploy.yaml
       Wrote .github/workflows/ghat_check.yaml
    Finished generated 2 workflows in [TIME]
